--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,9 +1,23 @@
-/* Here we can set styles for this lab page that we don't want to effect others pages */
+h1{
+    color: rgb(166, 166, 250);
+    font-size: 200%;
+    text-align: center;
 
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
+}
+
+p {
+    fontfamily: "comic sans";
+    text-indent: 20px;
+    margin-left: 10px;
+}
+
+#content {
+    width: 500px;
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+    border: solid 10px #ffb7e5;
+    background-color: #dcfcff;
+    min-height: 300px;
+    margin: 10px;
+    
   }
