changed colors more

--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@
 
 /* we can select an html element tag, in this case "body" will apply to the whole document */
 body {
-  background-color: #cdcdfd;
+  background-color: #000000;
 }
 
 /* we can have rules apply to multiple elements at the same time with commas */
@@ -21,16 +21,16 @@ h1 {
 
 /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
 #content {
-  margin: 20px;
+  margin: 10px;
   padding: 25px;
-  border: double 2px #fbb3ee;
-  background-color: #a183bf;
+  border: outset 2px #fbb3ee;
+  background-color: #030005;
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
 .minor-section {
   padding: 10px;
   margin-bottom: 10px;
-  border: solid 1px #bffead;
-  background-color: #385e3d;
+  border: solid 1px #ffbce9;
+  background-color: #000000;
 }
