--- a/css/site.css
+++ b/css/site.css
@@ -4,16 +4,19 @@
 
 /* we can select an html element tag, in this case "body" will apply to the whole document */
 body {
+  color: white;
   background-color: #000000;
 }
 
 /* we can have rules apply to multiple elements at the same time with commas */
 h1,h2,h3 {
+  color: white;
   font-family: 'Times New Roman', Times, serif;
 }
 
 /* and we can have rules that overlap other rules, both take effect */
 h1 {
+  color: white;
   letter-spacing: 5px;
   word-spacing: 5px;
   font-size: 250%;
