--- a/css/site.css
+++ b/css/site.css
@@ -26,7 +26,7 @@ h1 {
 #content {
   margin: 10px;
   padding: 25px;
-  border: outset 2px #fbb3ee;
+  border: outset 2px #ffbce9;
   background-color: #030005;
   color: rgb(255, 255, 255);
 }
