--- a/lab14/css/lab.css
+++ b/lab14/css/lab.css
@@ -4,6 +4,6 @@
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+    border: solid 1px #78fa8b;
+    background-color: #282105;
   }
